--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,18 @@
 /build
 /captures
 .externalNativeBuild
+
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
